--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
 body{
     display: flex;
     flex-direction: column;
+    background-image: url(assets/Images/messyJava.jpeg)
 }
 #view-high-scores{
+    display: flex;
     background-color: purple;
     width: fit-content;
     padding: 15px;
@@ -24,13 +26,18 @@ body{
     flex-direction: column;
     align-items: center;
     text-align: center;
-    border: 5px solid black;
-    margin-top: 100px;
+    /* border: 5px solid black; */
+    margin-top: 50px;
     width: 50%;
     border-radius: 25px;
+    padding: 10px;
+    background-color: rgb(214, 214, 214);
     
 }
 #start-quiz-button{
     position: relative;
     margin-top: 50px;
+    font-size: 40px;
+    background-color: red;
+    border-radius: 25px;
 }
