--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,21 @@
 body{
+    position: relative;
     display: flex;
     flex-direction: column;
-    background-image: url(assets/Images/messyJava.jpeg)
+    /* background-image: url(../../assets/Images/messyJava.jpeg);
+    background-repeat: repeat-y;
+    background-size: cover; */
 }
 #view-high-scores{
     display: flex;
-    background-color: purple;
-    width: fit-content;
-    padding: 15px;
+    background-color: black;
+    width: 25%;
+    height: fit-content;
+    padding: 5px;
     border-radius: 25px;
     color: white;
-    border: 3px solid black
+    
+    
 }
 #openingPage{
 
@@ -19,6 +24,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 #title-blurb{
     position: relative;
@@ -31,13 +37,46 @@ body{
     width: 50%;
     border-radius: 25px;
     padding: 10px;
-    background-color: rgb(214, 214, 214);
-    
+    /* background-color: rgb(214, 214, 214); */
+    font-family: monospace;
+    /* border: 5px solid black */
+}
+#title-blurb p{
+    font-family: monospace;
 }
 #start-quiz-button{
+    
     position: relative;
     margin-top: 50px;
     font-size: 40px;
     background-color: red;
     border-radius: 25px;
+    width: 50%;
+    border-width: 5px;
+    /* border: 5px solid black; */
+    padding: 10px;
+}
+.question-div{
+    display: flex;
+    position: relative;
+    justify-content: center;
+}
+.question-box{
+    position: relative;
+    height: fit-content;
+    width: 50%;
+    border: 5px solid black;
+    top: 50px;
+}
+.question{
+    height: fit-content;
+    border: 5px solid black;
+    background-color: red;
+    font-size: 30px
+}
+.choice{
+    border: 5px solid black;
+}
+.choice:hover{
+    background-color: gray;
 }
