got next question button working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,8 @@ body{
 }
 .choice{
     border: 5px solid black;
-    height: fit-content
+    height: fit-content;
+    padding-left: 10px;
 }
 .choice:hover{
     background-color: gray;
