--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,10 +7,12 @@ body{
     background-size: cover; */
 }
 #opening-page{
-    display: flex;
+    /* Keep in mind, display can only be changed in JS, under pageObjects */
+    
     align-items: center;
 }
 #view-high-scores{
+    position: relative;
     display: flex;
     background-color: black;
     width: 25%;
@@ -18,14 +20,19 @@ body{
     padding: 5px;
     border-radius: 25px;
     color: white;
-    
-    
-}
+    vertical-align: top;
 
+}
+    /* div{
+        border: 5px solid black 
+    } */
 #title-container{
     display: flex;
+    
     flex-direction: column;
     align-items: center;
+    
+    
     
 }
 #title-blurb{
@@ -34,14 +41,13 @@ body{
     flex-direction: column;
     align-items: center;
     text-align: center;
-    /* border: 5px solid black; */
     margin-top: 50px;
     width: 50%;
     border-radius: 25px;
     padding: 10px;
-    /* background-color: rgb(214, 214, 214); */
     font-family: monospace;
-    /* border: 5px solid black */
+    border: 3px dashed black
+   
 }
 #title-blurb p{
     font-family: monospace;
@@ -59,38 +65,74 @@ body{
     padding: 10px;
 }
 #quiz-page{
-    display: flex;
-    height: 600px
+    /* Keep in mind, display can only be changed in JS, under pageObjects */
+    height: 600px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+#back-to-start{
+    position: relative;
+    justify-content: left;
+    width: fit-content;
+    height: fit-content;
+    border-radius: 5px;
+}
+#timer-header{
+    position: relative;
+    text-align: right;
+    padding-right: 10px;
 }
 #timer{
-    border: 5px solid black;
+    background-color: antiquewhite;
+    position: absolute;
+    border: 1px solid black;
     height: 100px;
     width: 100px;
-    float: right;
-    
+    right: 0px;
+    border-radius: 25px;
+}
+#timer p{
+    position: relative;
+    top: -10%;
+    left: 30%;
+    font-size: 40px;
 }
 .question-div{
-    display: flex;
+    background-color: antiquewhite;
     position: relative;
-    justify-content: center;
+    border: 1px solid black;
+    border-radius: 25px;
+    text-align: center;
+    top: 105px;
+    width: 80%
+    
 }
 .question-box{
     position: relative;
     height: fit-content;
-    width: 50%;
-    border: 5px solid black;
-    top: 50px;
+    width: 100%;
+    
+    height: 100%;
+
+   
 }
 .question{
     height: fit-content;
-    border: 5px solid black;
-    background-color: red;
+    
+   
     font-size: 30px
+}
+#choices{
+    padding-bottom: 25px;
 }
 .choice{
     border: 5px solid black;
     height: fit-content;
     padding-left: 10px;
+    background-color: white;
+}
+#choice-result{
+    font-size: 30px;
 }
 .choice:hover{
     background-color: gray;
@@ -103,16 +145,19 @@ body{
     width: 100px;
     height: 50px;
     background-color: green;
+    border-radius: 10px;
 }
 #post-quiz-page{
-    display: flex;
-    background-color: green;
-    height: 600px
-
+    /* Keep in mind, display can only be changed in JS, under pageObjects */
+    
+    height: 600px;
+    position: relative;
 }
 #current-score{
+    background-color: antiquewhite;
     position: relative;
-    border: 5px solid black;
+    border: 1px solid black;
+    border-radius: 25px;
     text-align: center;
     top: 105px;
     width: 80%
@@ -125,12 +170,28 @@ body{
 #correct-answers-score{
     position: relative;
 }
-#post-quiz-timer{
+#post-timer-header{
     position: relative;
-    border: 5px solid black;
+    text-align: right;
+    padding-right: 10px;
+}
+#post-quiz-timer{
+    background-color: antiquewhite;
+    position: absolute;
+    border: 1px solid black;
     height: 100px;
     width: 100px;
-    float: right;
+    right: 0px;
+    border-radius: 25px;
+    
+}
+#time-post{
+    position: relative;
+    left: 25%;
+    top:-30%;
+    font-size: 50px;
+
+
 }
 #initials-form{
     position: relative;
@@ -143,5 +204,35 @@ body{
 }
 #textarea{
     position: relative;
+    top: 0px;
+    width: 50px;
     
+}
+#enter-initals{
+   position: relative;
+   top: -90px;
+    left: 0px;
+    border: 1px solid black;
+    background-color: rgb(223, 223, 223);
+   width: 22%;
+   height: 193px;;
+   padding-right: 5px;
+   border-radius: 25px;
+   
+}
+#initials-header{
+    position: relative;
+    left: 10px;
+    top: 0px;
+}
+#view-high-scores-post{
+    position: relative;
+    display: flex;
+    background-color: black;
+    width: 25%;
+    height: fit-content;
+    padding: 20px;
+    border-radius: 25px;
+    color: white;
+    vertical-align: top;
 }
