--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,7 @@ body{
     justify-content: center;
 }
 #back-to-start{
+    visibility: hidden;
     position: relative;
     justify-content: left;
     width: fit-content;
@@ -81,15 +82,17 @@ body{
     position: relative;
     text-align: right;
     padding-right: 10px;
+    top:-40px
 }
 #timer{
     background-color: antiquewhite;
     position: absolute;
-    border: 1px solid black;
+    
     height: 100px;
     width: 100px;
     right: 0px;
     border-radius: 25px;
+    top:40px
 }
 #timer p{
     position: relative;
@@ -98,9 +101,9 @@ body{
     font-size: 40px;
 }
 .question-div{
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     position: relative;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 25px;
     text-align: center;
     top: 105px;
@@ -111,8 +114,10 @@ body{
     position: relative;
     height: fit-content;
     width: 100%;
-    
+    /* border: 5px solid black; */
     height: 100%;
+    top: -100px;
+    left: 20px
 
    
 }
@@ -126,10 +131,14 @@ body{
     padding-bottom: 25px;
 }
 .choice{
-    border: 5px solid black;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: aquamarine;
     height: fit-content;
     padding-left: 10px;
-    background-color: white;
+    border-radius: 5px;
+    border: 1px solid black
+    
 }
 #choice-result{
     font-size: 30px;
@@ -154,13 +163,14 @@ body{
     position: relative;
 }
 #current-score{
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     position: relative;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 25px;
     text-align: center;
-    top: 105px;
-    width: 80%
+    top: -100px;
+    width: 80%;
+    padding-bottom: 20px
     
 }
 #post-quiz-score-header{
@@ -174,15 +184,17 @@ body{
     position: relative;
     text-align: right;
     padding-right: 10px;
+    top: -90px
 }
 #post-quiz-timer{
     background-color: antiquewhite;
     position: absolute;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 100px;
     width: 100px;
     right: 0px;
     border-radius: 25px;
+    top: 50px
     
 }
 #time-post{
@@ -200,7 +212,6 @@ body{
 }
 #initials-form{
     position: relative;
-    background-color: purple;
 }
 #textarea{
     position: relative;
@@ -209,10 +220,11 @@ body{
     
 }
 #enter-initals{
+    
    position: relative;
-   top: -90px;
-    left: 0px;
-    border: 1px solid black;
+   top: -328px;
+left: 0px;
+    /* border: 1px solid black; */
     background-color: rgb(223, 223, 223);
    width: 22%;
    height: 193px;;
@@ -226,6 +238,8 @@ body{
     top: 0px;
 }
 #view-high-scores-post{
+    visibility: hidden;
+    display: none;
     position: relative;
     display: flex;
     background-color: black;
@@ -242,4 +256,15 @@ body{
     font-size: 30px;
     float: right;
     top: -60px
+}
+#high-scores-page p{
+    font-size: 40px;
+}
+#score-table{
+    font-size: 40px;
+    border: 1px solid;
+    border-collapse: collapse;
+}
+#score-table td{
+    border: 1px solid black
 }
