added button to link to high scores page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,7 +159,7 @@ body{
 #post-quiz-page{
     /* Keep in mind, display can only be changed in JS, under pageObjects */
     
-    height: 600px;
+    
     position: relative;
 }
 #current-score{
@@ -268,13 +268,11 @@ left: 0px;
 #score-table td{
     border: 1px solid black
 }
-@media screen and (max-width: 768px) {
-    /* For elements that weren’t assigned width using a percentage, I used this method to make them fit nicely on a phone screen */
-    #post-quiz-page{
-        display: block;
-        
-    }
-    .project{
-        width: 90%;
-    }
+#test{
+    position: relative;
+    font-size: 30px;
+    top: 20px;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
 }
